password enter again

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="controls" style="display:none">
     <input type="password" name="" id="password" placeholder="password">
-    <input type="password" name="" id="password2" placeholder="password enter 2">
+    <input type="password" name="" id="password2" placeholder="password enter again">
     <br>
     <button id="encrypt">Encrypt File</button>
     <button id="decrypt">Decrypt File</button>
