--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <input type="password" name="" id="password" placeholder="password">
     <input type="password" name="" id="password2" placeholder="password enter again">
     <br>
-    <button id="encrypt">Encrypt File</button>
-    <button id="decrypt">Decrypt File</button>
+    <button id="encrypt">Encrypt Files</button>
+    <button id="decrypt">Decrypt Files</button>
     </div>
 
     <script>
